# internal/model/department_model.go
@@ -7,8 +7,6 @@ type DepartmentRequest struct {
 type DepartmentResponse struct {
 	ID       uint   `json:"id"`
 	Name     string `json:"name"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
 }
 
 type UpdateDepartmentRequest struct {
